// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-119yzhl"
  >
     
    <span>
      Default
    </span>
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-119yzhl iconOnly large"
  >
    <i
      class="material-icons svelte-119yzhl"
    >
      play_arrow
    </i>
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-119yzhl large"
  >
    <i
      class="material-icons svelte-119yzhl"
    >
      person
    </i>
     
    <span>
      Hey!
    </span>
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-119yzhl primary"
  >
     
    <span>
      Primary
    </span>
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-119yzhl primary iconOnly"
  >
    <i
      class="material-icons svelte-119yzhl"
    >
      volume_up
    </i>
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-119yzhl"
  >
    <i
      class="material-icons svelte-119yzhl"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
  </button>
</section>
`;
